k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insurance
  labels:
    name: insurance
    environment: production
